force-app/main/default/objects/GasFlowRate__c/GasFlowRate__c.object-meta.xml
<CustomObject>
    <label>GasFlowRate</label>
    <nameField>
        <label>GasFlowRate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GasFlowRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>