force-app/main/default/objects/GasFlowRate__c/fields/DensityStandardFrom__c.field-meta.xml
<CustomField>
    <fullName>DensityStandardFrom__c</fullName>
    <label>DensityStandardFrom</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>