force-app/main/default/objects/GasFlowRate__c/fields/DensityStandardTo__c.field-meta.xml
<CustomField>
    <fullName>DensityStandardTo__c</fullName>
    <label>DensityStandardTo</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>