force-app/main/default/objects/GasFlowRate__c/fields/PFromPsia__c.field-meta.xml
<CustomField>
    <fullName>PFromPsia__c</fullName>
    <label>PFromPsia</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>