force-app/main/default/objects/GasFlowRate__c/fields/PToPsia__c.field-meta.xml
<CustomField>
    <fullName>PToPsia__c</fullName>
    <label>PToPsia</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>