force-app/main/default/objects/GasFlowRate__c/fields/TFromR__c.field-meta.xml
<CustomField>
    <fullName>TFromR__c</fullName>
    <label>TFromR</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>