force-app/main/default/objects/GasFlowRate__c/fields/TToR__c.field-meta.xml
<CustomField>
    <fullName>TToR__c</fullName>
    <label>TToR</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>