force-app/main/default/objects/GasFlowRate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DensityActualFrom__c</columns>
    <columns>DensityActualTo__c</columns>
    <columns>DensityStandardFrom__c</columns>
    <columns>DensityStandardTo__c</columns>
    <columns>NAME</columns>
    <columns>GasFlowRate_UOM_From__c</columns>
    <columns>GasFlowRate_UOM_To__c</columns>
    <columns>Multiplier__c</columns>
    <columns>PFromPsia__c</columns>
    <columns>PToPsia__c</columns>
    <columns>TFromR__c</columns>
    <columns>TToR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>